# se_best_practices_ml_perspective

./: .flake8  404.html  index.html  mkdocs.yml  pyproject.toml  readme.md  sitemap.xml
.github/workflows/: build.yml
docs/: getting_started.md  github_actions.md  index.md  linting_and_formatting.md  managing_depedencies.md  testing.md
getting_started/: index.html
github_actions/: index.html
linting_and_formatting/: index.html
managing_depedencies/: index.html
se_best_practices_ml_perspective/: main.py  main_with_stylistic_errors.py
search/: search_index.json
testing/: index.html
tests/: test_main.py  test_se_best_practices_ml_perspective.py
