[tool.poetry]
name = "se_best_practices_ml_perspective"
version = "0.1.2"
description = "An opinionated, pedagogical guide on software engineering best practices for those of us in machine learning."
license = "Apache-2.0"
authors = ["johngiorgi <johnmgiorgi@gmail.com>"]
readme = "README.md"
homepage = "https://johngiorgi.github.io/se_best_practices_ml_perspective/"
repository = "https://github.com/JohnGiorgi/se_best_practices_ml_perspective"

[tool.poetry.dependencies]
python = "^3.6.1"
mkdocs-material = { version = "^5.5.8", optional = true }
pytorch-lightning = "^0.9.0"
torchvision = "^0.7.0"

[tool.poetry.extras]
documentation = ["mkdocs-material"]

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
black = "^20.8b0"
flake8 = "^3.8.3"

[tool.black]
line-length = 100
exclude = "se_best_practices_ml_perspective/main_with_stylistic_errors.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
